--- a/style.css
+++ b/style.css
@@ -316,4 +316,30 @@ button:hover{
             height: 80px;
         }
     }
+    @media (max-width: 600px) {
+        .forecast-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .forecast-card {
+            width: 45%;
+            margin: 5px;
+        }
+        .search-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    
+        .search-input {
+            width: 90%;
+            margin-bottom: 10px;
+        }
+    
+        .search-button {
+            width: 90%;
+            padding: 10px;
+        }
+    }
     
